--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,7 +1,6 @@
-configure_file(poet.h.in poet.h)
 
-add_executable(poet poet.cpp)
-target_include_directories(poet PUBLIC "${CMAKE_CURRENT_BINARY_DIR}")
-target_link_libraries(poet PUBLIC poet_lib MPI::MPI_CXX)
+# add_executable(poet poet.cpp)
+# target_include_directories(poet PUBLIC "${CMAKE_CURRENT_BINARY_DIR}")
+# target_link_libraries(poet PUBLIC poet_lib MPI::MPI_CXX)
 
-install(TARGETS poet DESTINATION bin)
+# install(TARGETS poet DESTINATION bin)
