--- a/src/poet.hpp.in
+++ b/src/poet.hpp.in
@@ -1,8 +1,10 @@
 #ifndef POET_H
 #define POET_H
 
+#include <string>
 static const char *poet_version = "@POET_VERSION@";
 
-static const char *CHEMISTRY_MODULE_NAME = "state_C";
+// using the Raw string literal to avoid escaping the quotes
+static inline std::string kin_r_library = R"(@R_KIN_LIB@)";
 
 #endif // POET_H
