Remove installation of poet binary

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -69,5 +69,5 @@ add_executable(poet_init initializer.cpp)
 target_link_libraries(poet_init PRIVATE poetinitlib RRuntime)
 target_include_directories(poet_init PRIVATE "${CMAKE_CURRENT_BINARY_DIR}")
 
-install(TARGETS poet DESTINATION bin)
+# install(TARGETS poet DESTINATION bin)
 
