Add Init/CMakeLists.txt and ChemistryInit.cpp files, and update initializer.cpp and InitialList.hpp

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,64 +1,64 @@
-add_subdirectory(DataStructures)
+add_library(POETLib OBJECT)
 
-add_library(poetinitlib
-  Init/InitialList.cpp
-  Init/GridInit.cpp  
+target_sources(
+  POETLib 
+  PRIVATE
+  Init/InitialList.cpp 
+  Init/GridInit.cpp 
   Init/DiffusionInit.cpp
+  Init/ChemistryInit.cpp
+  PRIVATE 
+  DataStructures/Field.cpp
 )
 
-target_link_libraries(poetinitlib PUBLIC
-  DataStructures
-  RRuntime 
-  IPhreeqcPOET
-  tug
+target_include_directories(POETLib PUBLIC "${CMAKE_CURRENT_SOURCE_DIR}")
+target_link_libraries(
+  POETLib 
+  PUBLIC RRuntime
+  PUBLIC IPhreeqcPOET
+  PRIVATE tug
 )
 
-target_include_directories(poetinitlib PUBLIC
-  "${CMAKE_CURRENT_SOURCE_DIR}/Init"
-)
+# add_library(poetlib
+#   Base/Grid.cpp
+#   Base/SimParams.cpp
+#   Chemistry/ChemistryModule.cpp
+#   Chemistry/MasterFunctions.cpp 
+#   Chemistry/WorkerFunctions.cpp 
+#   Chemistry/SurrogateModels/DHT_Wrapper.cpp 
+#   Chemistry/SurrogateModels/DHT.c 
+#   Chemistry/SurrogateModels/HashFunctions.cpp 
+#   Chemistry/SurrogateModels/InterpolationModule.cpp 
+#   Chemistry/SurrogateModels/ProximityHashTable.cpp
+#   Transport/DiffusionModule.cpp
+# )
 
-target_compile_definitions(poetinitlib PUBLIC STRICT_R_HEADERS)
+# target_link_libraries(poetlib PUBLIC
+#   DataStructures
+#   Init
+#   MPI::MPI_C 
+#   ${MATH_LIBRARY} 
+#   RRuntime 
+#   PhreeqcRM
+#   tug
+# )
 
-add_library(poetlib
-  Base/Grid.cpp
-  Base/SimParams.cpp
-  Chemistry/ChemistryModule.cpp
-  Chemistry/MasterFunctions.cpp 
-  Chemistry/WorkerFunctions.cpp 
-  Chemistry/SurrogateModels/DHT_Wrapper.cpp 
-  Chemistry/SurrogateModels/DHT.c 
-  Chemistry/SurrogateModels/HashFunctions.cpp 
-  Chemistry/SurrogateModels/InterpolationModule.cpp 
-  Chemistry/SurrogateModels/ProximityHashTable.cpp
-  Transport/DiffusionModule.cpp
-)
+# target_compile_definitions(poetlib PUBLIC STRICT_R_HEADERS OMPI_SKIP_MPICXX)
 
-target_link_libraries(poetlib PUBLIC
-  DataStructures
-  MPI::MPI_C 
-  ${MATH_LIBRARY} 
-  RRuntime 
-  PhreeqcRM
-  tug
-  poetinitlib
-)
+# mark_as_advanced(PHREEQCRM_BUILD_MPI PHREEQCRM_DISABLE_OPENMP)
+# set(PHREEQCRM_DISABLE_OPENMP ON CACHE BOOL "" FORCE)
 
-target_compile_definitions(poetlib PUBLIC STRICT_R_HEADERS OMPI_SKIP_MPICXX)
+# option(POET_DHT_DEBUG "Build with DHT debug info" OFF)
 
-mark_as_advanced(PHREEQCRM_BUILD_MPI PHREEQCRM_DISABLE_OPENMP)
-set(PHREEQCRM_DISABLE_OPENMP ON CACHE BOOL "" FORCE)
+# if(POET_DHT_DEBUG)
+#   target_compile_definitions(poetlib PRIVATE DHT_STATISTICS)
+# endif()
 
-option(POET_DHT_DEBUG "Build with DHT debug info" OFF)
+# option(POET_PHT_ADDITIONAL_INFO "Enables additional information in the PHT" OFF)
 
-if(POET_DHT_DEBUG)
-  target_compile_definitions(poetlib PRIVATE DHT_STATISTICS)
-endif()
-
-option(POET_PHT_ADDITIONAL_INFO "Enables additional information in the PHT" OFF)
-
-if (POET_PHT_ADDITIONAL_INFO)
-  target_compile_definitions(poetlib PRIVATE POET_PHT_ADD)
-endif()
+# if (POET_PHT_ADDITIONAL_INFO)
+#   target_compile_definitions(poetlib PRIVATE POET_PHT_ADD)
+# endif()
 
 file(READ "${PROJECT_SOURCE_DIR}/R_lib/kin_r_library.R" R_KIN_LIB )
 file(READ "${PROJECT_SOURCE_DIR}/R_lib/init_r_lib.R" R_INIT_LIB)
@@ -70,7 +70,7 @@ configure_file(poet.hpp.in poet.hpp @ONLY)
 # target_include_directories(poet PRIVATE "${CMAKE_CURRENT_BINARY_DIR}")
 
 add_executable(poet_init initializer.cpp)
-target_link_libraries(poet_init PRIVATE poetinitlib RRuntime)
+target_link_libraries(poet_init PRIVATE POETLib RRuntime)
 target_include_directories(poet_init PRIVATE "${CMAKE_CURRENT_BINARY_DIR}")
 
 # install(TARGETS poet DESTINATION bin)
