--- a/src/DataStructures/CMakeLists.txt
+++ b/src/DataStructures/CMakeLists.txt
@@ -1,11 +1,3 @@
-add_library(DataStructures OBJECT 
+target_sources(POETLib PRIVATE 
     Field.cpp
-)
-
-target_link_libraries(DataStructures
-    PUBLIC RRuntime
-)
-
-target_include_directories(DataStructures
-    PUBLIC ${CMAKE_CURRENT_SOURCE_DIR}
 )
