Update CMakeLists.txt and include headers in test files

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -3,7 +3,7 @@ file(GLOB test_SRC
   "*.cpp" "*.c")
 
 add_executable(testPOET ${test_SRC})
-target_link_libraries(testPOET doctest poetlib)
+target_link_libraries(testPOET doctest POETLib)
 target_include_directories(testPOET PRIVATE "${PROJECT_SOURCE_DIR}/src")
 
 get_filename_component(TEST_RInsideSourceFile "RInsidePOET_funcs.R" REALPATH)
