--- a/.gitmodules
+++ b/.gitmodules
@@ -2,12 +2,6 @@
 	path = ext/tug
 	url = ../tug.git
 
-[submodule "ext/doctest"]
-	path = ext/doctest
-	url = https://github.com/doctest/doctest.git
-[submodule "ext/phreeqc"]
-	path = ext/phreeqc
-	url = git@git.gfz-potsdam.de:naaice/phreeqcpoet.git
 [submodule "ext/iphreeqc"]
 	path = ext/iphreeqc
-	url = git@git.gfz-potsdam.de:naaice/iphreeqc.git
+	url = ../iphreeqc.git
