--- a/src/poet.hpp.in
+++ b/src/poet.hpp.in
@@ -22,6 +22,7 @@
 
 #pragma once
 
+#include <cstdint>
 #include <set>
 #include <string>
 #include <vector>
@@ -43,10 +44,13 @@ const std::set<std::string> paramlist{
     "work-package-size", "dht-strategy", "dht-size",   "dht-snaps",
     "dht-file",          "interp-size",  "interp-min", "interp-bucket-entries"};
 
+constexpr uint32_t CHEM_DEFAULT_WORK_PACKAGE_SIZE = 32;
+
 struct RuntimeParameters {
   std::vector<double> timesteps;
 
   bool print_progressbar;
+  uint32_t work_package_size;
 
   Rcpp::List init_params;
 
