--- a/src/poet.hpp.in
+++ b/src/poet.hpp.in
@@ -46,6 +46,8 @@ const std::set<std::string> paramlist{
 
 constexpr uint32_t CHEM_DEFAULT_WORK_PACKAGE_SIZE = 32;
 
+constexpr uint32_t CHEM_DHT_SIZE_PER_PROCESS_MB = 1.5E3;
+
 struct RuntimeParameters {
   std::vector<double> timesteps;
 
@@ -53,6 +55,15 @@ struct RuntimeParameters {
   uint32_t work_package_size;
 
   Rcpp::List init_params;
+
+  bool use_dht;
+  std::uint32_t dht_size;
+  std::uint8_t dht_snaps;
+
+  bool use_interp;
+  std::uint32_t interp_size;
+  std::uint32_t interp_min_entries;
+  std::uint32_t interp_bucket_entries;
 
   struct ChemistryParams {
     // std::string database_path;
