Update Dockerfile with required dependencies and install R packages

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -2,13 +2,11 @@ FROM mcr.microsoft.com/vscode/devcontainers/base:debian
 
 RUN sudo apt-get update && export DEBIAN_FRONTEND=noninteractive \
     && sudo apt-get install -y \
-        cmake-curses-gui \
+        cmake \
         git \
         libeigen3-dev \
         libopenmpi-dev \
-        r-cran-rcpp \
-        r-cran-rinside \
-        gdb
+        r-base-dev 
 
 RUN git clone https://github.com/doctest/doctest.git /doctest \
     && cd /doctest \
@@ -18,3 +16,5 @@ RUN git clone https://github.com/doctest/doctest.git /doctest \
     && make install \
     && cd / \
     && rm -rf /doctest
+
+RUN  /usr/bin/R -q -e "install.packages(c('foreach', 'doParallel', 'Rcpp', 'RInside'))"
