--- a/bench/dolo/CMakeLists.txt
+++ b/bench/dolo/CMakeLists.txt
@@ -1,9 +1,18 @@
-install(FILES
-    dolo_diffu_inner.R
-    dolo_diffu_inner_large.R
-    dolo_inner.pqi
-    dolo_interp_long.R
-    phreeqc_kin.dat
-DESTINATION
-    share/poet/bench/dolo
+set(bench_files
+    dolo_inner_large.R
+    dolo_interp.R
 )
+
+set(runtime_files
+    dolo_inner_large_rt.R
+    dolo_interp_rt.R
+)
+
+ADD_BENCH_TARGET(
+    dolo_bench
+    bench_files 
+    runtime_files
+    "dolo"
+)
+
+add_dependencies(${BENCHTARGET} dolo_bench)
