--- a/src/poet.hpp.in
+++ b/src/poet.hpp.in
@@ -20,7 +20,7 @@
 ** Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
 */
 
-#pragma once  
+#pragma once
 
 #include <cstdint>
 #include <set>
@@ -35,63 +35,37 @@ static const char *poet_version = "@POET_VERSION@";
 static const inline std::string kin_r_library = R"(@R_KIN_LIB@)";
 
 static const inline std::string init_r_library = R"(@R_INIT_LIB@)";
-static const inline std::string ai_surrogate_r_library = R"(@R_AI_SURROGATE_LIB@)";
+static const inline std::string ai_surrogate_r_library =
+    R"(@R_AI_SURROGATE_LIB@)";
 static const inline std::string r_runtime_parameters = "mysetup";
-
-const std::set<std::string> flaglist{"ignore-result", "dht", "P", "progress",
-                                     "interp", "ai-surrogate", "qs"};
-const std::set<std::string> paramlist{
-    "work-package-size", "dht-strategy", "dht-size",   "dht-snaps",
-    "dht-file",          "interp-size",  "interp-min", "interp-bucket-entries"};
-
-constexpr uint32_t CHEM_DEFAULT_WORK_PACKAGE_SIZE = 32;
-
-constexpr uint32_t CHEM_DHT_SIZE_PER_PROCESS_MB = 1.5E3;
 
 struct RuntimeParameters {
   std::string out_dir;
   std::vector<double> timesteps;
-  std::string out_ext; // MDL added to accomodate for qs::qsave/qread
-
-  bool print_progressbar;
-  uint32_t work_package_size;
 
   Rcpp::List init_params;
 
-  bool use_dht;
+  bool as_rds = false;
+  std::string out_ext; // MDL added to accomodate for qs::qsave/qread
+
+  bool print_progress = false;
+
+  static constexpr std::uint32_t WORK_PACKAGE_SIZE_DEFAULT = 32;
+  std::uint32_t work_package_size;
+
+  bool use_dht = false;
+  static constexpr std::uint32_t DHT_SIZE_DEFAULT = 1.5E3;
   std::uint32_t dht_size;
+  static constexpr std::uint8_t DHT_SNAPS_DEFAULT = 0;
   std::uint8_t dht_snaps;
 
-  bool use_interp;
+  bool use_interp = false;
+  static constexpr std::uint32_t INTERP_SIZE_DEFAULT = 100;
   std::uint32_t interp_size;
+  static constexpr std::uint32_t INTERP_MIN_ENTRIES_DEFAULT = 5;
   std::uint32_t interp_min_entries;
+  static constexpr std::uint32_t INTERP_BUCKET_ENTRIES_DEFAULT = 20;
   std::uint32_t interp_bucket_entries;
 
-  bool use_ai_surrogate;
-  struct ChemistryParams {
-    // std::string database_path;
-    // std::string input_script;
-
-    //   bool use_dht;
-    //   std::uint64_t dht_size;
-    //   int dht_snaps;
-    //   std::string dht_file;
-    //   std::string dht_outdir;
-    //   NamedVector<std::uint32_t> dht_signifs;
-
-    //   bool use_interp;
-    //   std::uint64_t pht_size;
-    //   std::uint32_t pht_max_entries;
-    //   std::uint32_t interp_min_entries;
-    //   NamedVector<std::uint32_t> pht_signifs;
-
-    //   struct Chem_Hook_Functions {
-    //     RHookFunction<bool> dht_fill;
-    //     RHookFunction<std::vector<double>> dht_fuzz;
-    //     RHookFunction<std::vector<std::size_t>> interp_pre;
-    //     RHookFunction<bool> interp_post;
-    //   } hooks;
-
-    //   void initFromR(RInsidePOET &R);
-  };
+  bool use_ai_surrogate = false;
 };
