--- a/src/poet.hpp.in
+++ b/src/poet.hpp.in
@@ -36,6 +36,8 @@ static const char *poet_version = "@POET_VERSION@";
 // using the Raw string literal to avoid escaping the quotes
 static const inline std::string kin_r_library = R"(@R_KIN_LIB@)";
 static const inline std::string init_r_library = R"(@R_INIT_LIB@)";
+static const inline std::string ai_surrogate_r_library =
+    R"(@R_AI_SURROGATE_LIB@)";
 static const inline std::string r_runtime_parameters = "mysetup";
 
 struct RuntimeParameters {
