Feat: AI Surrogate inference (with Keras or C++) and parallel training

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -27,7 +27,7 @@ option(USE_AI_SURROGATE "Compiles the AI surrogate functions with Python.h integ
 if(USE_AI_SURROGATE)
   add_definitions(-DUSE_AI_SURROGATE)
   message("Building with AI surrogate functions")
-  message(" - Needs Python with Numpy and Keras and Threads libraries")
+  message(" - Needs Python (with Numpy & Keras) and Threads libraries")
   # make sure to use the python installation from the conda environment
   if(DEFINED ENV{CONDA_PREFIX})
     set(Python3_EXECUTABLE "$ENV{CONDA_PREFIX}/bin/python3")
