--- a/src/poet.hpp.in
+++ b/src/poet.hpp.in
@@ -75,4 +75,5 @@ struct RuntimeParameters {
   int batch_size; // Can be set in the R input script
   int training_epochs; // Can be set in the R input script
   int training_data_size; // Can be set in the R input script
+  std::string save_model_path; // Can be set in the R input script
 };
