--- a/src/poet.hpp.in
+++ b/src/poet.hpp.in
@@ -72,6 +72,8 @@ struct RuntimeParameters {
   bool use_ai_surrogate = false; // Can be set with command line flag ---ai-surrogate
 
   bool use_Keras_predictions; // Can be set in the R input script
+  bool Keras_predictions_always_use_CPU; // Can be set in the R input script
+  bool Keras_training_always_use_CPU; // Can be set in the R input script
   int batch_size; // Can be set in the R input script
   int training_epochs; // Can be set in the R input script
   int training_data_size; // Can be set in the R input script
