--- a/src/poet.hpp.in
+++ b/src/poet.hpp.in
@@ -30,6 +30,7 @@
 #include <Rcpp.h>
 
 #define SRC_DIR "@CMAKE_SOURCE_DIR@"
+#define CUDA_SRC_DIR "@CUDA_TOOLKIT_ROOT_DIR@"
 
 static const char *poet_version = "@POET_VERSION@";
 
@@ -70,12 +71,11 @@ struct RuntimeParameters {
 
   /*AI surriogate configuration*/
   bool use_ai_surrogate = false; // Can be set with command line flag ---ai-surrogate
-
+  bool disable_training; // Can be set in the R input script
   bool use_Keras_predictions; // Can be set in the R input script
-  bool Keras_predictions_always_use_CPU; // Can be set in the R input script
-  bool Keras_training_always_use_CPU; // Can be set in the R input script
   int batch_size; // Can be set in the R input script
   int training_epochs; // Can be set in the R input script
   int training_data_size; // Can be set in the R input script
   std::string save_model_path; // Can be set in the R input script
+  std::string cuda_src_dir = CUDA_SRC_DIR; // From CMake
 };
